--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 PORT=8096
-REACT_APP_BACKEND_SERVER_URI=http://localhost:8081
+REACT_APP_BACKEND_SERVER_URIOLD=http://localhost:8081
+REACT_APP_BACKEND_SERVER_URI=https://letssignup.onrender.com
